--- a/resources/assets/sass/frontend/app.scss
+++ b/resources/assets/sass/frontend/app.scss
@@ -1,4 +1,12 @@
 
+// VAR COLORS *********
+  $colors: (
+    primary:#310447,
+    primary-light:#5d004a,
+    back-grey: #F9FAFF,
+    white:#fff,
+  );
+// VAR COLORS ********* END
 // Variables
 @import "variables";
 
@@ -18,6 +26,7 @@
 @import "footer";
 
 // Pages
+@import "login";
 @import "blog";
 
 // RTL
@@ -120,11 +129,12 @@ iframe {
     outline-offset: -1px;
   }
 }
+
 .page-home{
-  background: #f8f8f8;
+  background: map-get($colors, back-grey);
 }
 .navbar-mp{
-  background: #310447;
+  background: map-get($colors, primary);
 }
 .jumbotron{
   background-image: url(/images/travel.jpg);
@@ -168,7 +178,7 @@ iframe {
       border-top:none;
     }
     &:hover{
-      box-shadow: 2px 4px 15px -4px #310447;
+      box-shadow: 2px 4px 15px -4px map-get($colors, primary);
       cursor: pointer;
       .card-body{
         background: #fff;
@@ -179,106 +189,119 @@ iframe {
     }
   }
 }
-.search-script{
-  display: grid;
-  grid-template-columns: 1fr 1fr repeat(3,180px) ;
-  grid-column-gap: 0em;
-  grid-row-gap: 1em;
-  box-shadow: 0 3px 20px 2px #a1edfe;
-  transition: .2s linear;
-  margin-top: 12em;
-  div{
-    input{
-      width: 100%;
-      border: none;
-      border-right: 1px solid #dadada;
-      height: 2.5em;
-      padding: 1em;
-      color: gray;      
-    }
-    &:nth-last-child(2){
+.content-script{
+  position: absolute;
+  bottom: 15%;
+  width: 100%;
+  left: 0;
+  padding: 0 8%;
+  .search-script{
+    display: grid;
+    grid-template-columns: 1fr 1fr repeat(3,180px) ;
+    grid-column-gap: 0em;
+    grid-row-gap: 1em;
+    box-shadow: 0 3px 20px 2px #a1edfe;
+    transition: .2s linear;  
+    div{
       input{
-        border-right: none;
-      }      
-    }
-    &:first-child{
-      position: relative;
-      &::after{
-        content: url("/images/plane-departure-solid.svg");
-        position: absolute;
-        width: 1.5em;
-        opacity: .3;
-        right: 1em;
-        top: .7em;
+        width: 100%;
+        border: none;
+        border-right: 1px solid #dadada;
+        height: 2.5em;
+        padding: 1em;
+        color: gray;      
       }
-    }
-    &:nth-child(2){
-      position: relative;
-      &::after{
-        content: url("/images/plane-arrival-solid.svg");
-        position: absolute;
-        width: 1.5em;
-        opacity: .3;
-        right: 1em;
-        top: .7em;
+      &:nth-last-child(2){
+        input{
+          border-right: none;
+        }      
       }
-    }
-    &:nth-child(3),&:nth-child(4){
-      position: relative;
-      &::after{
-        content: url("/images/calendar-alt-regular.svg");
-        position: absolute;
-        width: 1.3em;
-        opacity: .2;
-        right: 1em;
-        top: .5em;
+      &:first-child{
+        position: relative;
+        &::after{
+          content: url("/images/plane-departure-solid.svg");
+          position: absolute;
+          width: 1.5em;
+          opacity: .3;
+          right: 1em;
+          top: .7em;
+        }
       }
-    }
-    button{
-      width: 100%;
-      background: #310447;
-      color: #fff;
-      border: none;
-      height: 2.5em;
-      cursor: pointer;
-      transition: .2s linear;
-      &:hover{
-        background: #5d004a;
+      &:nth-child(2){
+        position: relative;
+        &::after{
+          content: url("/images/plane-arrival-solid.svg");
+          position: absolute;
+          width: 1.5em;
+          opacity: .3;
+          right: 1em;
+          top: .7em;
+        }
       }
-    }
-  }    
+      &:nth-child(3),&:nth-child(4){
+        position: relative;
+        &::after{
+          content: url("/images/calendar-alt-regular.svg");
+          position: absolute;
+          width: 1.3em;
+          opacity: .2;
+          right: 1em;
+          top: .5em;
+        }
+      }
+      button{
+        width: 100%;
+        background: map-get($colors, primary);
+        color: #fff;
+        border: none;
+        height: 2.5em;
+        cursor: pointer;
+        transition: .2s linear;
+        &:hover{
+          background: map-get($colors, primary-light);
+        }
+      }
+    }    
+  }
 }
+
 @media (max-width: 768px){
   .content-package{
     grid-template-columns: 1fr 1fr;
   }
-  .search-script{
-    grid-template-columns: 1fr;
-    margin-top: 1em;
-    box-shadow: none;
-    grid-row-gap: 0;
-    div{
-      input{
-        border-right: none;
-        border-bottom: 1px solid #dadada;
-        height: 3.5em;
-      }      
-      button{
-        height: 4em;
-        font-weight: bold;
-      }
-      &:nth-last-child(2){
+  .content-script{
+    position: inherit;
+    padding: 0;
+    .search-script{
+      grid-template-columns: 1fr;
+      margin-top: 1em;
+      box-shadow: none;
+      grid-row-gap: 0;
+      position: inherit;
+      div{
         input{
-          border-bottom: none;
+          border-right: none;
+          border-bottom: 1px solid #dadada;
+          height: 3.5em;
         }      
-      }
-      &:first-child,&:nth-child(2),&:nth-child(3),&:nth-child(4){
-        &::after{
-          top: 1em;
+        button{
+          height: 4em;
+          font-weight: bold;
+        }
+        &:nth-last-child(2){
+          input{
+            border-bottom: none;
+          }      
+        }
+        &:first-child,&:nth-child(2),&:nth-child(3),&:nth-child(4){
+          &::after{
+            top: 1em;
+          }
         }
       }
     }
   }
+  
   .jumbotron{
     background-position: right;
     min-height: 10em;
